--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,12 @@ a {
 
 header {
   border-bottom: 1px solid #f9f7fe;
-  padding-bottom: 30px;
+  padding: 30px;
 }
 
 .search-input {
   background-color: #f9f7fe;
   border: none;
-  color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   padding: 20px;
   width: 75%;
@@ -34,7 +33,7 @@ header {
 .search-button {
   margin-left: 5px;
   font-size: 16px;
-  background-color: #885df1;
+  background: #885df1;
   color: white;
   border: none;
   padding: 20px;
